syntax = "proto3"; // protobuf의 버전

package problem; 

// Go 패키지 경로 설정
option go_package = "github.com/mail-cote/go-server/proto/problem";


// 문제 데이터 메시지
message Problem {
  string quiz_num = 1;      // 문제 번호
  string title = 2;         // 문제 제목
  string description = 3;   // 문제 설명
  string field = 4;         // 난이도
}

// GetProblemByNumber 요청 및 응답
// 클라이언트가 특정 문제를 요청할 때 사용하는 메시지.
message GetProblemRequest {
  string quiz_num = 1;
}

message GetProblemResponse {
  Problem problem = 1; // 문제 데이터를 포함하는 메시지
}

// Problem Service 정의
service ProblemService {
    // 클라이언트가 문제 번호를 제공하면, 서버가 해당 문제 반환
  rpc GetProblemByNumber (GetProblemRequest) returns (GetProblemResponse);
}
